Fixed spacing between elements

--- a/index.css
+++ b/index.css
@@ -348,7 +348,7 @@
 
         #element-76
         {
-        height: 420px;
+        height: 340px;
         width: 800px;
         left: 105px;
         top: 748px;
@@ -368,7 +368,7 @@
         height: 859px;
         width: 860px;
         left: 50px;
-        top: 1161px;
+        top: 1100px;
         z-index: 29;
         }
 
@@ -377,7 +377,7 @@
         height: 588px;
         width: 800px;
         left: 81px;
-        top: 2049px;
+        top: 1750px;
         z-index: 30;
         }
 
@@ -394,7 +394,7 @@
         height: 600px;
         width: 960px;
         left: 0px;
-        top: 2754px;
+        top: 2275px;
         z-index: 31;
         }
 
@@ -420,7 +420,7 @@
         height: 672px;
         width: 960px;
         left: 0px;
-        top: 3455px;
+        top: 2725px;
         z-index: 33;
         }
 
